<resources>
    <string name="app_name">PAAYA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="update_profile">Update profile</string>
    <string name="login">Login</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="communicate">Communicate</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us_for_feedback">Contact us for feedback</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="ne">ne</string>
    <string name="n">n</string>
    <string name="submit">SUBMIT</string>
    <string name="_999">999</string>
    <string name="hga">hga</string>
    <string name="how_to_update_profile">How to Update Profile?</string>
    <string name="how_to_contact_matcher">How to contact matcher ?</string>
    <string name="how_to_add_other_categories">How to add other categories</string>
    <string name="how_to_set_location">How to set location ?</string>
    <string name="how_to_change_language">How to change language?</string>
    <string name="what_is_hint_question">What is Hint Question</string>
    <string name="what_is_reward_for">What is reward for</string>
    <string name="how_to_see_matches">How to see Matches?</string>
    <string name="how_can_we_improve">How can we improve?</string>
    <string name="your_suggestion">your Suggestion</string>
    <string name="send">SEND</string>
    <string name="nbdbnnn_gmail_com">nbdbnnn@gmail.com</string>
    <string name="user">user</string>
    <string name="number_phone">number phone</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="your_suggestion2">Your suggestion</string>
    <string name="string_email">\email</string>
    <string name="found_something">FOUND SOMETHING</string>
    <string name="help_us_to_help_others">Help us to help others</string>
    <string name="lost_something">LOST SOMETHING</string>
    <string name="todoo">TODO</string>
    <string name="paayaa">PAAYA</string>
    <string name="please_select_the_item_you_found">Please select the item you found</string>
    <string name="laptop">Laptop</string>
    <string name="please_select_the_item_you_lost">Please select the item you lost</string>
    <string name="cancel">Cancel</string>
    <string name="describe_where_you_lost_found_the_item">describe where you lost/found the item :</string>
    <string name="sendk">Send</string>
    <string name="rsto_rue_kairouan">rsto../ rue../kairouan</string>
    <string name="inter_the_location">Inter the location</string>
    <string name="map">map</string>
    <string name="type_a_hint_question_perfect_match">Type a Hint question perfect Match</string>
    <string name="todo">TODO</string>
    <string name="eg_what_color_of_pouch_do_your_phone_had">eg:What color of pouch do your phone had?</string>
    <string name="ask">Ask</string>
    <string name="confirm">confirm</string>
    <string name="question">Question</string>
    <string name="_15_12_1999">15/12/1999</string>
    <string name="date">Date</string>
    <string name="color">color</string>
    <string name="asus">Asus</string>
    <string name="main_category">Main Category</string>
    <string name="read">read</string>
    <string name="sub_category">Sub Category</string>
    <string name="please_verify_your_provided_description">please Verify your Provided Description</string>
    <string name="enter_your_personal_information">Enter your Personal Information</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="enter_your_phone_number">Enter Your phone Number</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="sign_up_via_phone">Sign up Via phone</string>
    <string name="sign_up_via_email">Sign up Via email</string>
    <string name="continue_as_guest">continue as guest</string>
    <string name="view_our_terms_of_service_and_privacy_policy">View our terms of Service and Privacy Policy</string>
    <string name="sign_up">Sign up</string>
    <string name="paaya">PAAYA</string>
    <string name="_216">+216</string>
    <string name="verify">verify</string>
    <string name="a_six_digit_otp_has_sent_to_n_your_number_please_enter_to_n_verify">A six digit OTP has sent to \n your number please enter to \n verify</string>
    <string name="image">image</string>
    <string name="logout">logout</string>
    <string name="instagram">Instagram</string>
    <string name="linked">Linked</string>
    <string name="twitter">Twitter</string>
    <string name="follow_us">Follow us</string>
    <string name="facebook">Facebook</string>
    <string name="update_photo">Update photo</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="male">Male</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="img">img</string>
    <string name="set_a_reward_on_return">Set A Reward On Return</string>
    <string name="_500dt">500DT</string>
    <string name="set">set</string>
    <string name="skip">Skip</string>
    <string name="update">Update</string>
    <string name="string_phone_number">\@string/phone_number</string>
    <string name="string_user">\@string/user</string>
    <string name="string_n">\@string/n</string>
    <string name="location">Location</string>
</resources>