<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#52FFFFFF"
    android:backgroundTint="#52FFFFFF"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_button"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.AppCompatTextView
            android:paddingStart="@dimen/réf20"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/enter_your_personal_information"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="645dp"
        android:background="#52FFFFFF"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imgg"
            android:layout_width="188dp"
            android:layout_height="100dp"
            android:layout_marginStart="60dp"
            android:contentDescription="@string/img"
            android:src="@drawable/cuteavtar" />

        <TextView
            android:layout_width="313dp"
            android:layout_height="31dp"
            android:text="@string/update_photo"
            android:textAlignment="center"
            android:textColor="@color/blue_button"
            android:textSize="18dp"
             />


        <EditText
            android:padding="5dp"
            android:id="@+id/name1"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/borderbouttonakira"
            android:hint="@string/enter_your_full_name"
            android:inputType="text"
            android:textSize="19sp" />

        <EditText
            android:padding="10dp"
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10sp"
            android:autofillHints=""
            android:background="@drawable/borderbouttonakira"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textSize="19sp" />

        <EditText
            android:padding="10dp"
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10sp"
            android:autofillHints=""
            android:background="@drawable/borderbouttonakira"
            android:hint="@string/enter_your_phone_number"
            android:inputType="number"
            android:textSize="19sp" />

        <EditText
            android:padding="10dp"
            android:id="@+id/ad1"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="10sp"
            android:autofillHints=""
            android:background="@drawable/borderbouttonakira"
            android:hint="@string/enter_your_address"
            android:inputType="text"
            android:textSize="19sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="17dp"
            android:background="@color/blue_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_gender"
                android:textColor="@color/blue_button"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/other" />
            </RadioGroup>
        </LinearLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="SING"
            android:text="@string/submit"
            android:textColor="@color/cardview_light_background"
            android:textSize="19sp" />
    </LinearLayout>
</LinearLayout>