<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#52FFFFFF"
    android:backgroundTint="#52FFFFFF"
    android:orientation="vertical"
    tools:context=".description">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_button"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:padding="4dp"
            android:text="@string/type_a_hint_question_perfect_match"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="588dp"
        android:backgroundTint="#52FFFFFF"
        android:orientation="vertical"
        android:padding="10dp">


        <ImageView
            android:id="@+id/simpleImageView"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/data" />

        <EditText
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:hint="@string/eg_what_color_of_pouch_do_your_phone_had"
            android:padding="10dp"
            android:textColor="@color/blue_button"
            android:textSize="20sp" />

        <Button
            android:id="@+id/mm"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="20dp"
            android:text="@string/ask"
            android:textColor="@color/cardview_light_background"
            android:textSize="25sp"
            tools:ignore="OnClick" />
        <Button
            android:id="@+id/mmm"
            android:onClick="cancul"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            tools:ignore="OnClick" />
    </LinearLayout>


    </LinearLayout>

