<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#52FFFFFF"
    android:backgroundTint="#52FFFFFF"
    android:orientation="vertical"
    tools:context=".reward">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue_button"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/set_a_reward_on_return"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="100dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="#52FFFFFF"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/simpleImageView"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/reward" />

        <EditText
            android:id="@+id/txtManny"
            android:layout_width="152dp"
            android:layout_height="63dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="60dp"
            android:autofillHints=""
            android:hint="@string/_500dt"
            android:textColor="@color/blue_button"
            android:textSize="25sp"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button

            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_marginStart="100dp"
            android:onClick="set"
            android:text="@string/set"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,OnClick" />

        <Button

            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_marginStart="30dp"
            android:onClick="skip"
            android:text="@string/skip"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,OnClick" />
    </LinearLayout>
</LinearLayout>

